# urbs

./: .gitignore  comp.py  pyproject.toml  run_intertemporal.py  run_single_year.py  runme.py
doc/: conf.py
src/urbs/: CustomCon.py  dataset.py  model.py  output.py  plot.py  report.py  runfunctions.py  saveload.py  scenarios.py  util.py  validation.py
src/urbs/features/: BuySellPrice.py  modelhelper.py  storage.py  transmission.py
src/urbs/query/: execute.py
teaching/: 01_Electricity_supply_of_an_island.ipynb  02_Power_system_expansion_planning.ipynb  03_Sector_coupling.ipynb  03_mini_urbs.py
urbs/: __init__.py  colorcodes.py  dataset.py  identify.py  input.py  model.py  output.py  pyomoio.py  report.py  runfunctions.py  util.py
urbs/features/: TimeVarEff.py  __init__.py  dsm.py  transmission.py
urbs/query/: execute.py
