[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "urbs"
version = "0.0.1"
requires-python = "<3.8"
dependencies = [
    'importlib-metadata',
    'numpy <= 1.19',
    'pandas <= 1.2',
    'pandas-datareader',
    'matplotlib',
    'openpyxl==3.0.1',
    'xlrd == 1.2.0',
    'pyomo <= 5.6.8',
    'loguru',
    'pyarrow',
    'rich[jupyter]',
    'tables == 3.6.1',
    #'glpk',
    'psutil == 5.6',
    'pyutilib == 5.8',
    'notebook',
]
[project.optional-dependencies]
dev = ["black[d,jupyter]", 'pre-commit']
gurobi = ['gurobipy']
